--- a/app/assets/stylesheets/components/_tabs.sass
+++ b/app/assets/stylesheets/components/_tabs.sass
@@ -182,6 +182,7 @@
     display: flex
     position: relative
     left: 5%
+    width: 95%
 
     @include mobile-xl
       left: 3%
